chore: Add delete avatar endpoint
