# docs/swagger.yaml
@@ -283,16 +283,7 @@ paths:
       - auth
   /auth/account/avatar:
     patch:
-      consumes:
-      - multipart/form-data
-      description: uploads a new avatar image for the user. Only PNG, JPG, and JPEG
-        formats are allowed
-      parameters:
-      - description: Avatar Image
-        in: formData
-        name: avatar
-        required: true
-        type: file
+      description: deletes user's avatar image
       produces:
       - application/json
       responses:
@@ -300,17 +291,13 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/responsebody.Account'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/responsebody.Message'
         "404":
           description: Not Found
           schema:
             $ref: '#/definitions/responsebody.Message'
       security:
       - AccessToken: []
-      summary: Upload User Avatar
+      summary: Delete user avatar
       tags:
       - auth
   /auth/account/confirm:
